force-app/main/default/objects/Plan__c/fields/Plan_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Plan_Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan Sponsor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Plans</relationshipLabel>
    <relationshipName>Plans</relationshipName>
    <type>Lookup</type>
</CustomField>