force-app/main/default/objects/Plan__c/fields/Plan_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Plan_Sub_Type__c</fullName>
    <label>Plan Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>401(k)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>