force-app/main/default/objects/Plan__c/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PST (UTC-8)</fullName>
            </value>
            <value>
                <fullName>EST (UTC-5)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>